ft:adding for review

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
-DEVELOPMENT_DB=
-TEST_DB=
-PRODUCTION_DB=
+DEVELOPMENT_DB=mongodb://127.0.0.1:27017/devdb
+TEST_DB=mongodb://127.0.0.1:27017/testdb
+PRODUCTION_DB=mongodb+srv://landry:mongodb@cluster0.2qprh.mongodb.net/myFirstDatabase?retryWrites=true&w=majority/proddb
