--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
     "dev": "better-npm-run dev",
     "test": "better-npm-run test"
   },
-  "betterScripts":{
+  "betterScripts": {
     "dev": {
-      "command":"nodemon --exec babel-node ./src/app.js",
-      "env":{
+      "command": "nodemon npx babel-node ./src/app.js",
+      "env": {
         "NODE_ENV": "development",
         "PORT": 3000
       }
     },
     "test": {
-      "command":"nodemon --exec babel-node ./src/app.js",
-      "env":{
+      "command": "nodemon --exec babel-node ./src/app.js",
+      "env": {
         "NODE_ENV": "test",
         "PORT": 5000
       }
     },
     "prod": {
-      "command":"node ./dist/app.js",
-      "env":{
+      "command": "node ./dist/app.js",
+      "env": {
         "NODE_ENV": "production"
       }
     }
