--- a/package.json
+++ b/package.json
@@ -2,31 +2,31 @@
   "name": "my-brand-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "build": "babel src -d dist",
     "start": "npm run build && better-npm-run prod",
     "dev": "better-npm-run dev",
     "test": "better-npm-run test"
   },
-  "betterScripts":{
+  "betterScripts": {
     "dev": {
-      "command":"nodemon --exec babel-node ./src/app.js",
-      "env":{
+      "command": "nodemon --exec ./node_modules/.bin/babel-node ./src/app.js",
+      "env": {
         "NODE_ENV": "development",
-        "PORT": 3000
-      }
-    },
-    "test": {
-      "command":"nodemon --exec babel-node ./src/app.js",
-      "env":{
-        "NODE_ENV": "test",
         "PORT": 5000
       }
     },
+    "test": {
+      "command": "nodemon --exec ./node_modules/.bin/babel-node ./src/app.js",
+      "env": {
+        "NODE_ENV": "test",
+        "PORT": 3000
+      }
+    },
     "prod": {
-      "command":"node ./dist/app.js",
-      "env":{
+      "command": "node ./dist/app.js",
+      "env": {
         "NODE_ENV": "production"
       }
     }
