--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
-DEVELOPMENT_DB=mongodb://127.0.0.1:27017/devdb
-TEST_DB=mongodb://127.0.0.1:27017/testdb
-PRODUCTION_DB=mongodb+srv://landry:mongodb@cluster0.2qprh.mongodb.net/myFirstDatabase?retryWrites=true&w=majority/proddb
+DEVELOPMENT_DB=mongodb:local database for developing
+TEST_DB=mongodb:local database for testing
+PRODUCTION_DB=mongo server online
