--- a/package.json
+++ b/package.json
@@ -51,9 +51,13 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/register": "^7.16.9",
     "better-npm-run": "^0.1.1",
+    "cloudinary": "^1.28.1",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
-    "mongoose": "^6.1.8"
+    "mongoose": "^6.1.8",
+    "multer": "^1.4.4",
+    "multer-storage-cloudinary": "^4.0.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
