--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "PORT": 5000
       }
     },
-    "test": 
+    "test":{
       "command": "nodemon --exec ./node_modules/.bin/babel-node ./src/app.js",
 
       
