--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
       }
     },
     "test": {
-      "command": "nodemon --exec ./node_modules/.bin/babel-node ./src/app.js",
+      "command": "nyc --reporter=html --reporter=text mocha --require @babel/register ./tests/* --timeout 1000000 --exit || true",
       "env": {
         "NODE_ENV": "test",
         "PORT": 3000
@@ -53,14 +53,17 @@
     "bcrypt": "^5.0.1",
     "better-npm-run": "^0.1.1",
     "cloudinary": "^1.28.1",
+    "cors": "^2.8.5",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
+    "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-storage-cloudinary": "^4.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
     "chai": "^4.3.6",
