--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,7 +8,9 @@ on:
     branches: [ develop ]
   pull_request:
     branches: [ develop ]
-
+env:
+  TEST_DB: ${{ secrets.TEST_DB }}
+  JWT_SECRET: ${{ secrets.JWT_SECRETE }}
 jobs:
   build:
 
