--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build": "babel src -d dist",
+    "build": "babel src -d dist --copy-files",
     "start": "npm run build && better-npm-run prod",
     "dev": "better-npm-run dev",
     "test": "better-npm-run test"
